--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@
 }
 
 
-body{
+body {
     display: grid;
     place-items: center;
     background-color: hsl(217, 54%, 11%);
     max-height: 100vh;
-    font-family: 'Outfit' , sans-serif;
+    font-family: 'Outfit', sans-serif;
     margin-top: 4rem;
 }
 
-.nft-card{
+.nft-card {
     width: 25rem;
     padding: 1.5rem;
     border-radius: 1rem;
@@ -28,7 +28,7 @@ body{
     width: 100%;
 }
 
-.nft-card__content h1{
+.nft-card__content h1 {
     font-size: 2.3em;
     color: #fff;
 }
@@ -39,13 +39,14 @@ body{
     font-weight: 300;
 }
 
-.nft-card__bidding-details,.eth-pricing {
+.nft-card__bidding-details,
+.eth-pricing {
     display: flex;
     align-items: center;
     gap: .6rem;
 }
 
-.nft-card__bidding-details .eth-pricing p{
+.nft-card__bidding-details .eth-pricing p {
     font-weight: 600;
     color: hsl(178, 100%, 50%);
 }
@@ -55,7 +56,7 @@ body{
     font-size: 1.1rem;
 }
 
-.nft-card__bidding-details img{
+.nft-card__bidding-details img {
     width: 1rem;
 }
 
@@ -70,7 +71,7 @@ body{
     gap: 1rem;
 }
 
-.nft-card__creator img{
+.nft-card__creator img {
     width: 11%;
     border: #fff 1px solid;
     border-radius: 50%;
@@ -81,7 +82,8 @@ body{
     font-weight: 300;
     color: hsl(215, 51%, 70%);
 }
- .nft-card__creator span {
+
+.nft-card__creator span {
     color: #fff;
 }
 
@@ -104,3 +106,5 @@ hr {
 .mg-b1 {
     margin-bottom: 1rem;
 }
+
+/* Procrastinated for 5 days wanted to update my git hub*/
