--- a/style.css
+++ b/style.css
@@ -106,3 +106,38 @@ hr {
 .mg-b1 {
     margin-bottom: 1rem;
 }
+
+@media (min-width: 35rem) {
+    body {
+        max-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .nft-card {
+        width: 20rem;
+        padding: 1.2rem;
+    }
+
+    .nft-card__content h1 {
+        font-size: 1.9rem;
+    }
+
+    .nft-card__content .nft-details {
+        font-size: 1rem;
+    }
+
+    .nft-card__bidding-details .eth-pricing p {
+        font-size: 1rem;
+    }
+
+    .nft-card__bidding-details {
+        font-size: 1rem;
+    }
+
+    .nft-card__creator p {
+        font-size: 1rem;
+    }
+}
